--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -8,10 +8,10 @@ div.app {
 .imagery {
   display: flex;
   flex: 1;
-  padding: 80px;
+  box-sizing: border-box;
+  padding: 50px 0;
 }
 .imagery * {
-  margin: 0 10px;
   flex: 1;
   text-align: center;
 }
