--- a/src/app/annotations-control/annotations-control.component.html
+++ b/src/app/annotations-control/annotations-control.component.html
@@ -13,4 +13,14 @@
     <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
   </button>
 
+  <button mat-button>
+    FILL
+    <mcc-color-picker [selectedColor]="annotations?.visualizerStyle?.initial?.fill || '#ffffff'" (selected)="changeFill($event)"></mcc-color-picker>
+  </button>
+
+  <button mat-button>
+    STROKE
+    <mcc-color-picker [selectedColor]="annotations?.visualizerStyle?.initial?.stroke || '#ffffff'" (selected)="changeStroke($event)"></mcc-color-picker>
+  </button>
+
 </div>
