add annotation context menu module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <div class="imagery">
     <div>
       <ansyn-imagery-view [settings]="settings"></ansyn-imagery-view>
+      <ansyn-annotations-context-menu [mapState]="settings"></ansyn-annotations-context-menu>
     </div>
   </div>
 
