--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -10,8 +10,9 @@ div.app {
   flex: 1;
   box-sizing: border-box;
   padding: 50px 0;
-}
-.imagery * {
-  flex: 1;
-  text-align: center;
+  div {
+    position: relative;
+    flex: 1;
+    text-align: center;
+  }
 }
