--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -15,4 +15,18 @@ div.app {
     flex: 1;
     text-align: center;
   }
+
+  /deep/ .ol-scale-line-inner {
+    margin-top: 16px;
+    min-width: 144px;
+  }
+
+  /deep/ .ol-mouse-position {
+    bottom: 5px;
+    top: auto;
+    right: auto;
+    padding-left: 13px;
+    padding-bottom: 18px;
+    color: #cccccc;
+  }
 }
