--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~ol/ol.css";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 body {
