--- a/src/app/annotations-control/annotations-control.component.html
+++ b/src/app/annotations-control/annotations-control.component.html
@@ -1,4 +1,11 @@
 <div class="list">
+
+<label>
+    show center icon
+      <input type="checkbox"
+         checked="showCenterIcon"
+        (change)="setCenterIcon()">
+</label>
   <button
     *ngFor="let mode of ANNOTATION_MODE_LIST"
     mat-button
