--- a/src/app/annotations-control/annotations-control.component.less
+++ b/src/app/annotations-control/annotations-control.component.less
@@ -8,5 +8,13 @@
 
     margin: 0 10px;
   }
+  .list .center-icon{
+    width: 32px;
+    height: 32px;
+  }
+
+  .gray{
+    background-color: gray;
+  }
 
 }
