--- a/src/app/annotations-control/annotations-control.component.html
+++ b/src/app/annotations-control/annotations-control.component.html
@@ -1,11 +1,15 @@
 <div class="list">
 
-<label>
-    show center icon
-      <input type="checkbox"
-         checked="showCenterIcon"
-        (change)="setCenterIcon()">
-</label>
+  <span>
+    <p>Annotations icon:</p>
+    <mat-button-toggle-group (change)="drawAnnotationWithIcon($event)">
+    <mat-button-toggle value="None">None</mat-button-toggle>
+    <mat-button-toggle value="logo"><img src="assets/center-icon.svg" class="center-icon"/></mat-button-toggle>
+    <mat-button-toggle value="forkme"><img src="assets/forkme.svg" class="center-icon gray"/></mat-button-toggle>
+  </mat-button-toggle-group>
+
+  </span>
+
   <button
     *ngFor="let mode of ANNOTATION_MODE_LIST"
     mat-button
@@ -33,7 +37,7 @@
   </button>
 
   <button mat-button>
-    <input type="file" (change)="loadJSON($event.target.files)" />
+    <input type="file" (change)="loadJSON($event.target.files)"/>
   </button>
 
 
