hotfix: icon url

--- a/src/app/annotations-control/annotations-control.component.html
+++ b/src/app/annotations-control/annotations-control.component.html
@@ -4,7 +4,7 @@
     <p>Annotations icon:</p>
     <mat-button-toggle-group (change)="drawAnnotationWithIcon($event)">
     <mat-button-toggle value="None">None</mat-button-toggle>
-    <mat-button-toggle value="logo"><img src="assets/center-icon.svg" class="center-icon"/></mat-button-toggle>
+    <mat-button-toggle value="logo"><img src="assets/logo.svg" class="center-icon"/></mat-button-toggle>
     <mat-button-toggle value="forkme"><img src="assets/forkme.svg" class="center-icon gray"/></mat-button-toggle>
   </mat-button-toggle-group>
 
